# EEGScopeAndArbitration

./: .gitignore  .ruff.toml  README.md  SETUP_WINDOWS.md  _smoke_test.py  dvc.yaml  final_decision.py  params.toml  pyproject.toml  tox.ini  train_and_eval.py  train_and_eval_config.default.py  util.py
eeg_win_stack/: util.py
eeg_win_stack/api/: __init__.py  artifacts.py  jobs.py
eeg_win_stack/api/backends/: __init__.py  base.py  local.py
eeg_win_stack/config/: loader.py  params.toml
eeg_win_stack/evaluation/: detail_exporter.py  evaluator.py
eeg_win_stack/io/: dataset_builder.py  eeg_loading.py  labeling.py  raw_eeg_loading.py  visual_eeg_loading.py
eeg_win_stack/models/: __init__.py  base.py  braindecode_models.py  factory.py  hybrid.py  tcn.py  vit.py
eeg_win_stack/pipeline/: evaluate.py  preprocess.py  train.py
eeg_win_stack/tests/api/: test_artifacts.py  test_backends.py  test_jobs.py
eeg_win_stack/tests/evaluation/: test_evaluator.py
eeg_win_stack/tests/io/: conftest.py  test_dataset_builder.py  test_eeg_loading.py
eeg_win_stack/tests/tools/: test_dataset_splitting.py  test_metrics.py  test_splits.py
eeg_win_stack/tests/training/: test_trainer.py
eeg_win_stack/tools/: dataset_splitting.py  filters.py  logging.py  metrics.py  paths.py  plotting.py  splits.py
eeg_win_stack/training/: trainer.py
examples/: sweep.sh
