[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "eeg-win-stack"
version = "0.1.0"
description = "EEG experimentation and arbitration project"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "numpy>=1.26,<2.0",
  "pandas>=2.2,<3.0",
  "scikit-learn>=1.4,<2.0",
  "torch>=2.2,<2.4",
  "torchvision>=0.17,<0.19",
  "mne>=1.6,<2.0",
  "braindecode>=0.8,<0.9",
  "einops>=0.7,<0.8",
  "bayesian-optimization>=1.4.3,<2.0",
  "skorch>=0.15,<0.16",
  "matplotlib>=3.8,<4.0",
  "xgboost>=2.0,<3.0",
  "Pillow>=10.0,<11.0",
]

[tool.setuptools]
py-modules = [
  "util",
  "final_decision",
  "hybrid_1",
  "results_boxplot",
  "tcn_1",
  "train_and_eval",
  "vit",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["eeg_win_stack*"]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
]
