[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "eeg-win-stack"
version = "0.1.0"
description = "EEG experimentation and arbitration project"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "numpy>=1.24,<2.0",
  "pandas>=2.3,<3.0",
  "scikit-learn>=1.2,<2.0",
  "torch>=1.13,<2.0",
  "torchvision>=0.14,<0.15",
  "mne>=0.24,<1.0",
  "braindecode>=0.6,<0.7",
  "einops>=0.8,<1.0",
  "bayesian-optimization>=1.2,<2.0",
  "skorch>=0.11,<1.0",
  "matplotlib>=3.9,<4.0",
  "xgboost>=1.7,<2.0",
  "Pillow>=9.3,<10.0",
]

[tool.setuptools]
py-modules = [
  "util",
  "final_decision",
  "hybrid_1",
  "results_boxplot",
  "tcn_1",
  "train_and_eval",
  "vit",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["eeg_win_stack*"]
